--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.2.1-prereleaseb94 - 2018/09/12
-%% The LaTeX package exercisebank - version v0.2.1-prerelease (2018/09/12) build 94
+%% exercisebank v0.2.1b95 - 2018/09/24
+%% The LaTeX package exercisebank - version v0.2.1 (2018/09/24) build 95
 %% Manual/Documentation for exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -119,7 +119,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.2.1-prerelease{\\[-0.5em]\footnotesize(build 94)}}}
+\title{{exercisebank - manual\\ v0.2.1{\\[-0.5em]\footnotesize(build 95)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
@@ -319,7 +319,7 @@ Sometimes you'd want to introcude your exercises and tell a little bit about it.
 \end{docEnvironment}
 \filbreak\subsection{Making sets}
 \begin{docCommand}{makesetdefaults}{\marg{nohead|intro}}\addcontentsline{toc}{subsubsection}{\refCom{makesetdefaults}}
-\defnew{v0.2.1-prerelease\\2018/09/12 }
+\defnew{v0.2.1\\2018/09/24 }
  Sets the default arguments to all makeset-keys.
 e.g.
 \begin{dispListing}
@@ -365,7 +365,7 @@ exercise, explaining short what the exercise is about. It's only visible when us
  \begin{marker}If \dac{sprite} is used, it should be the only command in \dac{begin}\{document\}\dac{end}\{document\}\end{marker}
 \end{docCommand}
 \begin{docCommand}{exec}{\marg{macros}}\addcontentsline{toc}{subsubsection}{\refCom{exec}}
-\updated{v0.2.1-prerelease\\2018/09/12 }
+\updated{v0.2.1\\2018/09/24 }
 You can use this in \dac{makeset} to execute commands between problems.
 E.g. to insert a new page in between two problems when using nohead:
 \begin{dispListing}
@@ -373,7 +373,7 @@ E.g. to insert a new page in between two problems when using nohead:
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{DeclareExerciseCommand}{\marg{command}\oarg{numargs}\marg{actions}}\addcontentsline{toc}{subsubsection}{\refCom{DeclareExerciseCommand}}
-\updated{v0.2.1-prerelease\\2018/09/12 }
+\updated{v0.2.1\\2018/09/24 }
 Now, use similar to newcommand. Does not support default arguments yet, but plans to.
 The old way of defining still works:
 \begin{dispListing}
@@ -406,10 +406,10 @@ As you can see in the intro section of the documentation, this is for cherry pic
 To be used in \refCom{makeset}
 \end{docCommand}
 \begin{docCommand}{orderedselect}{}\addcontentsline{toc}{subsubsection}{\refCom{orderedselect}}
-\defnew{v0.2.1-prerelease\\2018/09/12 }
+\defnew{v0.2.1\\2018/09/24 }
 \end{docCommand}
 \begin{docCommand}{buildset}{\oarg{intro|nohead|nointro}\marg{setname}}\addcontentsline{toc}{subsubsection}{\refCom{buildset}}
-\updated{v0.2.1-prerelease\\2018/09/12 }
+\updated{v0.2.1\\2018/09/24 }
 This command runs the set given. The set has do be defined by \dac{makeset}. E.eg
 \begin{dispListing}
 \makeset{myExerciseSet}{exercisefile1, \select{exercisefile2}{1,2}}
@@ -434,14 +434,14 @@ The following example prints "Exercise set number 1" and "Exercise set number 2"
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{buildsets}{\oarg{intro|nohead|nointro}\marg{list}}\addcontentsline{toc}{subsubsection}{\refCom{buildsets}}
-\updated{v0.2.1-prerelease\\2018/09/12 }
+\updated{v0.2.1\\2018/09/24 }
 This command will generate multiple sets:
 \begin{dispListing}
 \buildsets{set,set2,set3}
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{buildtags}{\marg{tagslist}\marg{setslist}}\addcontentsline{toc}{subsubsection}{\refCom{buildtags}}
-\defnew{v0.2.1-prerelease\\2018/09/12 }
+\defnew{v0.2.1\\2018/09/24 }
 This command will generate multiple sets:
 \begin{dispListing}
 \buildsets{tag,tag2,tag3}{set,set2,set3}
@@ -459,24 +459,28 @@ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.
 
  Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.g. 1
 \end{docCommand}
+\begin{docCommand}{HideTags}{\marg{list}}\addcontentsline{toc}{subsubsection}{\refCom{HideTags}}
+\defnew{v0.2.1\\2018/09/24 }
+Hide all exercises containing the list of tags when building a set.
+\end{docCommand}
 \filbreak\subsection{Configuration and options}
 You can do a lot of configurations on this package, and probably
  even more to come in later versions!
 \begin{docCommand}{ShowNumbers}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowNumbers}}
-\updated{v0.2.1-prerelease\\2018/09/12 }
+\updated{v0.2.1\\2018/09/24 }
  Shows the numbers in fron of the part problems and intros that should be used with
  \dac{exclude} and \dac{select}
 \end{docCommand}
 \begin{docCommand}{ShowTags}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowTags}}
-\defnew{v0.2.1-prerelease\\2018/09/12 }
+\defnew{v0.2.1\\2018/09/24 }
  Shows the tags in front of the part problems much like \dac{ShowNumbers}
 \end{docCommand}
 \begin{docCommand}{ShowFilenames}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowFilenames}}
-\defnew{v0.2.1-prerelease\\2018/09/12 }
+\defnew{v0.2.1\\2018/09/24 }
  Shows the path+filename to the current exercise file
 \end{docCommand}
 \begin{docCommand}{exercisebanksetup}{\marg{\oarg{key/values}}}\addcontentsline{toc}{subsubsection}{\refCom{exercisebanksetup}}
-\updated{v0.2.1-prerelease\\2018/09/12 }
+\updated{v0.2.1\\2018/09/24 }
  Here is a list of the different keys and their meaning
 \keyDef{part problems}{On/Off}{On}{
  This is whether or not to do part problems. E.g. 1a), 1b) etc.
@@ -575,7 +579,7 @@ The Norwegian translation would then be done with
 \end{docCommand}
 \filbreak\subsection{Problem options and tagging}
 \begin{docCommand}{nextproblem}{}\addcontentsline{toc}{subsubsection}{\refCom{nextproblem}}
-\defnew{v0.2.1-prerelease\\2018/09/12 }
+\defnew{v0.2.1\\2018/09/24 }
 Prior to a problem environment in an exercise file you can pass options
 using the \dac{nextproblem} command. If you e.g. wanted to hide one regardless
 of what set it is you'd do
@@ -620,7 +624,7 @@ Here are the \dac{nextproblem} keys:
 
 \filbreak\subsection{Triggers}
 \begin{docCommand}{Trigger}{\marg{Any Macro}}\addcontentsline{toc}{subsubsection}{\refCom{Trigger}}
-\updated{v0.2.1-prerelease\\2018/09/12 }
+\updated{v0.2.1\\2018/09/24 }
  See \refCom{At}\\
  Available triggers:\\
 \dac{Trigger}\dac{PartProblemHeaderSuffix}:\\ Triggers after the part problem header.
@@ -656,7 +660,7 @@ where the package should be looking for exercises. Default is the same directory
 \end{docCommand}
 This package also includes some extra stuff. For example the \dac{At} and \dac{Trigger}
 \begin{docCommand}{At}{\marg{AnyMacro}}
-\updated{v0.2.1-prerelease\\2018/09/12 }Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
+\updated{v0.2.1\\2018/09/24 }Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
 \begin{dispListing}
  \At\BeginSomething{DoSomething}
  Which is triggered with
@@ -709,6 +713,7 @@ Distance above Problem \# header
  \addcontentsline{mac}{macro}{\refCom{At}}{}
 \addcontentsline{mac}{macro}{\refCom{DeclareExerciseCommand}}{}
 \addcontentsline{mac}{macro}{\refCom{DisplaySolutions}}{}
+\addcontentsline{mac}{macro}{\refCom{HideTags}}{}
 \addcontentsline{mac}{macro}{\refCom{ShowFilenames}}{}
 \addcontentsline{mac}{macro}{\refCom{ShowNumbers}}{}
 \addcontentsline{mac}{macro}{\refCom{ShowTags}}{}
@@ -799,7 +804,7 @@ Distance above Problem \# header
     \change{Introducing \refCom{buildsets}-command for building more than one set at a time.}
     \change{Ability to add front page with the \refKey{front page} setup-key.}
     \change{You can now remove the forced margin setup with \refKey{style margins}.}
-\newversion{v0.2.1-prerelease 2018/09/12}
+\newversion{v0.2.1 2018/09/24}
     \change{Added options for individual part problems using the \dac{nextproblem}-command}
     \change{Added tagging for part problems using using the \dac{nextproblem}-command and \dac{buildtags}-commands.}
     \change{Fixed problems related to \dac{ShowNumbers} not showing correctly.}
