--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -48,7 +48,7 @@
     \change{Introducing \refCom{buildsets}-command for building more than one set at a time.}
     \change{Ability to add front page with the \refKey{front page} setup-key.}
     \change{You can now remove the forced margin setup with \refKey{style margins}.}
-\newversion{@@VERSION @@DATE}
+\newversion{v0.2.1 2018/09/24}
     \change{Added options for individual part problems using the \dac{nextproblem}-command}
     \change{Added tagging for part problems using using the \dac{nextproblem}-command and \dac{buildtags}-commands.}
     \change{Fixed problems related to \dac{ShowNumbers} not showing correctly.}
