--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -58,11 +58,11 @@
     \change{\dac\DeclareExerciseCommand~now takes args}
     \change{Keys sent to \dac\makeset can now be sent to \dac\buildset~and~\dac\buildsets}
     \change{Introducing \dac\makesetdefaults}
+\newversion{@@VERSION @@DATE}
+    \change{Made trailing commas ignored in all lists (\dac\makeset,\dac\buildset,\dac\select,\dac\exclude, etc.)}
 \chlogtable
 
 
 % Testers and thanks
-\thankyou{\gh{tristelune1} -- \ghURL{tristelune1} for help with testing and bug-reporting the current version (0.2.1)}
-\thankyou{\gh{thorstengrothe} -- \ghURL{thorstengrothe} for help with testing and bug-reporting the current version (0.2.1)}
-% \tester{\gh{thorstengrothe}}
-% \tester{\gh{tristelune1}}
+\tester{\gh{thorstengrothe}}
+\tester{\gh{tristelune1}}
