--- a/src/packages.tex
+++ b/src/packages.tex
@@ -7,5 +7,6 @@
 \usepackage{pgfpages}
 \usepackage{geometry}
 \usepackage{listofitems}
+\ignoreemptyitems
 \usepackage{trimspaces}
 \usepackage{needspace}
