--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -60,6 +60,7 @@
     \change{Introducing \dac\makesetdefaults}
 \newversion{@@VERSION @@DATE}
     \change{Made trailing commas ignored in all lists (\dac\makeset,\dac\buildset,\dac\select,\dac\exclude, etc.)}
+    \change{Fixed bug where tags wouldn't hide.}
 \chlogtable
 
 
