--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -58,7 +58,7 @@
     \change{\dac\DeclareExerciseCommand~now takes args}
     \change{Keys sent to \dac\makeset can now be sent to \dac\buildset~and~\dac\buildsets}
     \change{Introducing \dac\makesetdefaults}
-\newversion{@@VERSION @@DATE}
+\newversion{v0.2.2 2018/10/04}
     \change{Made trailing commas ignored in all lists (\dac\makeset,\dac\buildset,\dac\select,\dac\exclude, etc.)}
     \change{Fixed bug where tags wouldn't hide.}
 \chlogtable
