--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -61,6 +61,10 @@
 \newversion{v0.2.2 2018/10/04}
     \change{Made trailing commas ignored in all lists (\dac\makeset,\dac\buildset,\dac\select,\dac\exclude, etc.)}
     \change{Fixed bug where tags wouldn't hide.}
+\newversion{@@VERSION @@DATE}
+    \change{Added possibility of custom part problem header from \dac\nextproblem}
+    \change{Added possibility of showing problem only when \dac\DisplaySolutions active}
+    \change{Corrected use of the length \dac\ppMarginBelow}
 \chlogtable
 
 
