--- a/exercises/firstexercise.tex
+++ b/exercises/firstexercise.tex
@@ -1,9 +1,6 @@
 %!TEX root = ../example.tex
-\begin{intro}
-Info about the exercise...
-\end{intro}
+\nextproblem{head=hello,solution only}
 \begin{problem}
-REMEMBER that \texttt{\string\end\{problem\}} can't have spaces in front of it and needs it's own line!
 \end{problem}
 %% REMEMBER that \end{solution} can't have spaces in front of it and needs it's own line
 \begin{solution}
