--- a/src/hidetags.tex
+++ b/src/hidetags.tex
@@ -3,7 +3,7 @@
 \At\DecideProblemDisplay{
 \ifnum\pdfstrcmp{\DisplayProblem}{\T@}=\z@\relax%
 \ifx\exb@hidetaglist\relax\else
-\exb@intersection@any{\exb@currentTags}{\exb@hidetaglist}{\global\exb@opthidestrue}{\global\exb@opthidesfalse}%
+\exb@intersection@any{\exb@currentTags}{\exb@hidetaglist}{\global\exb@opthidestrue}{}%
 \fi
 \fi
 }
