--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -25,11 +25,12 @@
 }{}
 \makeatother
 
-
 \global\let\incl = \input
+\input{ifs}
 \input{packages}
 \input{helpers}
 \input{packageoptions}
+\input{stopfilbreak}
 \input{i18n}
 \input{at}
 \input{pathcontrol}
