--- a/src/setbuilder.tex
+++ b/src/setbuilder.tex
@@ -63,7 +63,7 @@
 %% Makeset arg handler
 \pgfkeys{
  /makeset/.is family, /makeset,
- default/.style = {},
+ default/.style = {noheadarg=\@isFalse},
  intro/.style = {introarg=\@isTrue},
  nointro/.style = {introarg=\@isFalse},
  nohead/.style = {noheadarg=\@isTrue},
