--- a/release/exercisebank.sty
+++ b/release/exercisebank.sty
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exercisebank/
-%% The LaTeX package exercisebank - version v0.2.2 (2018/10/04) - build 97
+%% The LaTeX package exercisebank - version v0.2.3 (2018/10/25) - build 102
 %% exercisebank.sty: Exercise bank
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
@@ -13,10 +13,10 @@
 %% version 2008/05/04 or later.
 %% This work has the LPPL maintenance status `author-maintained'.
 %% This work consists of all files listed in README
-\ProvidesPackage{exercisebank}[2018/10/04 v0.2.2 Creates a setup that gives freedom in making sets and exercises.]
+\ProvidesPackage{exercisebank}[2018/10/25 v0.2.3 Creates a setup that gives freedom in making sets and exercises.]
 \xdef\exbank@quiet{1}
-\def\exercisebankversion{v0.2.2 - Build 97}
-\PackageWarningNoLine{exercisebank-v0.2.2}{This package is in the beta stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exercisebank. Thank you!}
+\def\exercisebankversion{v0.2.3 - Build 102}
+\PackageWarningNoLine{exercisebank-v0.2.3}{This package is in the beta stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exercisebank. Thank you!}
 \@ifundefined{ownLineNoSpacesGotIt}{\@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exercisebank}}
 }{}
 \gdef\setExercisesDir#1{\@latex@error{\string\setExercisesDir is deprecated. Use \string\exercisebanksetup{exercise directory=#1} instead}{}\stop\bye
@@ -24,6 +24,12 @@
 \@ifundefined{exercisesDir}{\gdef\@exercisesDir{.}
 }{}
 \global\let\incl = \input
+\global\newif\ifexbset@nextprob@header
+\global\exbset@nextprob@headertrue
+\newif\ifexb@opthides
+\global\newif\ifexb@b@nextprob@header
+\global\exb@b@nextprob@headerfalse
+\global\newif\ifexb@b@DisplaySolutions
 \usepackage{xstring}
 \usepackage{pgffor}
 \usepackage{scrextend}
@@ -60,7 +66,7 @@
 			\fi%
 }%
 	\fi}
-\gdef\exb@warn{\PackageWarningNoLine{exercisebank-v0.2.2}}
+\gdef\exb@warn{\PackageWarningNoLine{exercisebank-v0.2.3}}
 \gdef\exb@err#1{\PackageError{exercisebank}{#1}{}}
 \newif\ifexb@isInList
 \newcounter{exb@isin@dots}
@@ -150,7 +156,7 @@
 \gdef\exb@printCurrentTags{Tags: \exb@currentTags~}
 \gdef\ShowFilenames{\At\VeryBeginProblem{\exerciseFile\\}}
 \gdef\@DisplaySolutions{\@isFalse}
-\gdef\DisplaySolutions{\xdef\@DisplaySolutions{\isTrue}\@latex@warning{Showing solutions}}
+\gdef\DisplaySolutions{\global\exb@b@DisplaySolutionstrue\xdef\@DisplaySolutions{\isTrue}\@latex@warning{Showing solutions}}
 \gdef\ifDisplaySolutions{\if\@DisplaySolutions\@isTrue}
 \gdef\@SolutionsOnly{\@isFalse}
 \gdef\SolutionsOnly{\xdef\@SolutionsOnly{\@isTrue}\DisplaySolutions}
@@ -215,6 +221,43 @@ switches/.cd,
 \if\exbank@opt@tightenparagraphs\@isTrue\relax%
 \filbreak%
 \fi%
+}
+\@dlog{unfilbreak@exercisebank}
+\@ifdefinable\@My@filbreak@counter{\newcount\@My@filbreak@counter}
+\global \@My@filbreak@counter = 0
+\@ifdefinable\@My@filbreak@mark{\newmarks\@My@filbreak@mark}
+\renewcommand*\filbreak{%
+    \par
+    \global\advance \@My@filbreak@counter \@ne
+    \marks\@My@filbreak@mark{\number\@My@filbreak@counter}%
+    \vfil
+    \penalty -200
+    \vfilneg
+}
+\newcommand*\@My@finish@stopfilbreak{}
+\newcommand*\stopfilbreak{%
+    \par
+    \ifnum\prevdepth >\@m \else\prevdepth \z@ \fi
+    \nobreak\null
+    \nobreak\vskip -\baselineskip
+    \penalty\z@
+    \begingroup
+        \output{%
+            \typeout{t: \the\pagetotal, g: \the\pagegoal}%
+            \unvbox\@cclv
+            \ifnum 0\topmarks\@My@filbreak@mark <\@My@filbreak@counter
+                \gdef\@My@finish@stopfilbreak{%
+                    \penalty\z@%
+}%
+            \else
+                \gdef\@My@finish@stopfilbreak{%
+                    \penalty\z@ %
+}%
+            \fi
+}%
+        \break
+    \endgroup
+    \@My@finish@stopfilbreak
 }
 \pgfkeys{ /exbanki18n/.is family, /exbanki18n,
   default/.style = {Problem = Problem, Solution = Solution},
@@ -283,7 +326,7 @@ switches/.cd,
 \setlength{\pMarginBelow}{0em}
 \setlength{\pMarginAbove}{\baselineskip}
 \setlength{\introMargin}{-1.5em}
-\setlength{\ppMarginBelow}{\baselineskip}
+\setlength{\ppMarginBelow}{0em}
 \setlength{\ppMarginAbove}{0em}
 \setlength\parindent{0pt}
 \newbox\ppmarkbox
@@ -323,25 +366,36 @@ switches/.cd,
 	\fi%
 \ifnum\pdfstrcmp{\exbank@opt@doMargins}{\@isTrue}=\z@\relax%
 \newbox\nobox%
-\gdef\exb@pp@lefttag{\leavevmode{\smash{\llap{{\exb@prePPHead\exbank@opt@partProblemHeader\Trigger\PartProblemHeaderSuffix}\hskip\ppMargin}\exb@postPPHead}}}%
+\bgroup
+\let\exb@partProblemHeader\exbank@opt@partProblemHeader
+\ifexb@b@nextprob@header\relax
+	\global\exb@b@nextprob@headerfalse
+	\addtocounter{partproblemcounter}{-1}
+	\let\exb@partProblemHeader\exb@nextprob@header%
+\fi
+\gdef\exb@pp@lefttag{\leavevmode{\smash{\llap{{\exb@prePPHead\exb@partProblemHeader\Trigger\PartProblemHeaderSuffix}\hskip\ppMargin}\exb@postPPHead}}}%
 \else%
-\gdef\exb@pp@lefttag{{\exbank@opt@partProblemHeader\Trigger\PartProblemHeaderSuffix}}%
+\gdef\exb@pp@lefttag{{\exb@partProblemHeader\Trigger\PartProblemHeaderSuffix}}%
 \fi%
-\AtNextPar{\exb@pp@lefttag}%
+\bgroup
+\AtNextPar{\exb@pp@lefttag\global\let\exb@pp@lefttag\relax}%
 \ignorespaces}%
 \At\EndPartproblem{%
-	\vspace*{\pMarginBelow}%
+	\vspace*{\ppMarginBelow}%
 	\tighten@paragraph\par%
 }
 \At\BeginSolution{\hfill\break\vspace*{\solutionMarginAbove}{\exbank@opt@solutionHeader}}
 \At\EndSolution{}
-\newif\ifexb@opthides
 \providecommand\exb@currentTags{}
+\providecommand\exb@nextprob@header{}
 \pgfkeys{/exbank/problems/.cd,%
-default/.style={hide=false,tag=\relax},%
+default/.style={hide=false,tag=\relax,reset pp head},%
 hide/.is if={exb@opthides},%
 tags/.estore in=\exb@currentTags,%
-tag/.code={\pgfkeysalso{tags={#1}}}%
+tag/.code={\pgfkeysalso{tags={#1}}},
+head/.code={\global\exb@b@nextprob@headertrue\gdef\exb@nextprob@header{#1}},%
+reset pp head/.code={\global\exb@b@nextprob@headerfalse},
+solution only/.code={\ifexb@b@DisplaySolutions\else\pgfkeysalso{/exbank/problems/hide=true}\fi}
 }
 \def\nextproblem{\pgfqkeys{/exbank/problems}}
 \At\EndProblem{%
@@ -369,8 +423,8 @@ tag/.code={\pgfkeysalso{tags={#1}}}%
 \newif\ifexb@isdisplaying
 \newif\ifexb@hidenextsol
 \global\exb@hidenextsolfalse
-\gdef\exb@ifshowproblem#1#2{\exb@isdisplayingfalse\ifnum\pdfstrcmp{\DisplayProblem}{\@isTrue}=\z@\ifexb@opthides\else\exb@isdisplayingtrue\fi\fi%
-\ifexb@isdisplaying#1\else#2\fi}
+\gdef\exb@ifshowproblem#1#2{\exb@isdisplayingfalse\ifnum\pdfstrcmp{\DisplayProblem}{\@isTrue}=\z@\global\exb@isdisplayingtrue\fi%
+\ifexb@opthides\global\exb@isdisplayingfalse\@dlog{HIDEE}\else\@dlog{NHIDEE}\fi\ifexb@isdisplaying#1\else#2\fi}
 \gdef\showhideproblem#1{%
 \exb@ifshowproblem{\let\ProcessCutFile\do@ProcessCutFile#1\global\exb@hidenextsolfalse}{\def\ProcessCutFile{}\global\exb@hidenextsoltrue}%
 }
@@ -539,7 +593,7 @@ tag/.code={\pgfkeysalso{tags={#1}}}%
 \gdef\introarg{\@isFalse}
 \gdef\noheadarg{\@isFalse}
 \pgfkeys{ /makeset/.is family, /makeset,
- default/.style = {},
+ default/.style = {noheadarg=\@isFalse},
  intro/.style = {introarg=\@isTrue},
  nointro/.style = {introarg=\@isFalse},
  nohead/.style = {noheadarg=\@isTrue},
@@ -613,8 +667,8 @@ nohead/.code = {\gdef\noheadarg{\@isTrue}\ea\gdef\csname setlist@\exb@currentSet
 }
 \global\let\ex@protect\noexpand
 \long\gdef\exec#1{:\ex@protect{#1}}
-\gdef\exb@def@makeset@cmd#1{\@ifnextchar[{\@exb@def@makeset@cmd{#1}}{\@exb@def@makeset@cmd{#1}[0]}}
-\gdef\@exb@def@makeset@cmd#1[#2]#3{\def\ncArgs{#1[#2]}%
+\long\gdef\exb@def@makeset@cmd#1{\@ifnextchar[{\@exb@def@makeset@cmd{#1}}{\@exb@def@makeset@cmd{#1}[0]}}
+\long\gdef\@exb@def@makeset@cmd#1[#2]#3{\def\ncArgs{#1[#2]}%
 \bgroup\globaldefs=1\ea\newcommand\ncArgs{\exec{#3}}\egroup%
 }
 \def\exbank@def@makeset@command{\exb@warn{\string\exbank@def@makeset@command\space is deprecated and will be removed in versions >= 0.3.0. Use \string\exb@def@makeset@cmd}\exb@def@makeset@cmd}
@@ -626,11 +680,13 @@ nohead/.code = {\gdef\noheadarg{\@isTrue}\ea\gdef\csname setlist@\exb@currentSet
 \foreachitem\items\in\thelist{[{\item}]{#1},}%
 }
 \let\exbank@isFirstProblem\isTrue
-\exb@def@makeset@cmd{\phead}{  \if\exbank@isFirstProblem\isTrue%
+\exb@def@makeset@cmd{\phead}{%
+  \if\exbank@isFirstProblem\isTrue%
     \let\exbank@isFirstProblem\isFalse%
   \else%
     \Trigger\EndProblem%
   \fi%
+\par
   \Trigger\BeginProblem%
   \Trigger\VeryBeginProblem%
 }
@@ -787,7 +843,7 @@ disable points/.is if={exb@enablepoints}
 \def\exb@hidetaglist{}
 \At\DecideProblemDisplay{\ifnum\pdfstrcmp{\DisplayProblem}{\T@}=\z@\relax%
 \ifx\exb@hidetaglist\relax\else
-\exb@intersection@any{\exb@currentTags}{\exb@hidetaglist}{\global\exb@opthidestrue}{\global\exb@opthidesfalse}%
+\exb@intersection@any{\exb@currentTags}{\exb@hidetaglist}{\global\exb@opthidestrue}{}%
 \fi
 \fi
 }
