--- a/src/exercisecommands.tex
+++ b/src/exercisecommands.tex
@@ -4,6 +4,7 @@
 \gdef\exbank@setEnv@normal#1{
 \exbank@setEnv{#1}{normal}
 }
+\gdef\exerciseFile{}%
 \newcommand{\exbank@setEnv}[3][{-1}]{
   \if\@spriteMode\isFalse%
     \gdef\ppList{#1}
