--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -65,6 +65,7 @@
     \change{Added possibility of custom part problem header from \dac\nextproblem}
     \change{Added possibility of showing problem only when \dac\DisplaySolutions active}
     \change{Corrected use of the length \dac\ppMarginBelow}
+    \change{Fixed bug where \dac\phead and \dac\ShowFilenames crash}
 \chlogtable
 
 
