--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.2.3b102 - 2018/10/25
-%% The LaTeX package exercisebank - version v0.2.3 (2018/10/25) build 102
+%% exercisebank v0.2.3b103 - 2018/10/25
+%% The LaTeX package exercisebank - version v0.2.3 (2018/10/25) build 103
 %% Manual/Documentation for exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -119,7 +119,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.2.3{\\[-0.5em]\footnotesize(build 102)}}}
+\title{{exercisebank - manual\\ v0.2.3{\\[-0.5em]\footnotesize(build 103)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
@@ -827,6 +827,7 @@ Distance above Problem \# header
     \change{Added possibility of custom part problem header from \dac\nextproblem}
     \change{Added possibility of showing problem only when \dac\DisplaySolutions active}
     \change{Corrected use of the length \dac\ppMarginBelow}
+    \change{Fixed bug where \dac\phead and \dac\ShowFilenames crash}
 \chlogtable
 
 
