--- a/src/packageoptions.tex
+++ b/src/packageoptions.tex
@@ -19,7 +19,8 @@
 %:=\ShowFilenames
 %: Shows the path+filename to the current exercise file
 %:-
-\gdef\ShowFilenames{\At\VeryBeginProblem{\exerciseFile\\}}
+% \providecommand\exerciseFile{}
+\gdef\ShowFilenames{\At\InputExerciseFile{\exerciseFile\par}}
 %:§env
 %:=\DisplaySolutions
 %:Turns on the solutions, so they are shown.
