Integrated \SolutionsOnly. Fixes #62

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -66,6 +66,7 @@
     \change{Added possibility of showing problem only when \dac\DisplaySolutions active}
     \change{Corrected use of the length \dac\ppMarginBelow}
     \change{Fixed bug where \dac\phead and \dac\ShowFilenames crash}
+    \change{Introduced \dac\SolutionsOnly}
 \chlogtable
 
 
