--- a/exercisebank.sty
+++ b/exercisebank.sty
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exercisebank/
-%% The LaTeX package exercisebank - version v0.2.3 (2018/10/25) - build 103
+%% The LaTeX package exercisebank - version v0.2.3-prerelease (2018/10/30) - build 104
 %% exercisebank.sty: Exercise bank
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
@@ -13,10 +13,10 @@
 %% version 2008/05/04 or later.
 %% This work has the LPPL maintenance status `author-maintained'.
 %% This work consists of all files listed in README
-\ProvidesPackage{exercisebank}[2018/10/25 v0.2.3 Creates a setup that gives freedom in making sets and exercises.]
+\ProvidesPackage{exercisebank}[2018/10/30 v0.2.3-prerelease Creates a setup that gives freedom in making sets and exercises.]
 \xdef\exbank@quiet{1}
-\def\exercisebankversion{v0.2.3 - Build 103}
-\PackageWarningNoLine{exercisebank-v0.2.3}{This package is in the beta stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exercisebank. Thank you!}
+\def\exercisebankversion{v0.2.3-prerelease - Build 104}
+\PackageWarningNoLine{exercisebank-v0.2.3-prerelease}{This package is in the beta stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exercisebank. Thank you!}
 \@ifundefined{ownLineNoSpacesGotIt}{\@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exercisebank}}
 }{}
 \gdef\setExercisesDir#1{\@latex@error{\string\setExercisesDir is deprecated. Use \string\exercisebanksetup{exercise directory=#1} instead}{}\stop\bye
@@ -30,6 +30,7 @@
 \global\newif\ifexb@b@nextprob@header
 \global\exb@b@nextprob@headerfalse
 \global\newif\ifexb@b@DisplaySolutions
+\global\newif\ifexb@solutionsonly
 \usepackage{xstring}
 \usepackage{pgffor}
 \usepackage{scrextend}
@@ -66,7 +67,7 @@
 			\fi%
 }%
 	\fi}
-\gdef\exb@warn{\PackageWarningNoLine{exercisebank-v0.2.3}}
+\gdef\exb@warn{\PackageWarningNoLine{exercisebank-v0.2.3-prerelease}}
 \gdef\exb@err#1{\PackageError{exercisebank}{#1}{}}
 \newif\ifexb@isInList
 \newcounter{exb@isin@dots}
@@ -158,8 +159,7 @@
 \gdef\@DisplaySolutions{\@isFalse}
 \gdef\DisplaySolutions{\global\exb@b@DisplaySolutionstrue\xdef\@DisplaySolutions{\isTrue}\@latex@warning{Showing solutions}}
 \gdef\ifDisplaySolutions{\if\@DisplaySolutions\@isTrue}
-\gdef\@SolutionsOnly{\@isFalse}
-\gdef\SolutionsOnly{\xdef\@SolutionsOnly{\@isTrue}\DisplaySolutions}
+\gdef\SolutionsOnly{\DisplaySolutions\global\exb@solutionsonlytrue}
 \gdef\exb@currentPoints{0}
 \newif\ifexbank@if@needspace
 \global\exbank@if@needspacetrue
@@ -384,7 +384,7 @@ switches/.cd,
 	\vspace*{\ppMarginBelow}%
 	\tighten@paragraph\par%
 }
-\At\BeginSolution{\hfill\break\vspace*{\solutionMarginAbove}{\exbank@opt@solutionHeader}}
+\At\BeginSolution{\ifexb@solutionsonly\else\hfill\break\vspace*{\solutionMarginAbove}\fi{\exbank@opt@solutionHeader}}
 \At\EndSolution{}
 \providecommand\exb@currentTags{}
 \providecommand\exb@nextprob@header{}
@@ -399,129 +399,133 @@ solution only/.code={\ifexb@b@DisplaySolutions\else\pgfkeysalso{/exbank/problems
 }
 \def\nextproblem{\pgfqkeys{/exbank/problems}}
 \At\EndProblem{%
-\if\exbank@opt@tightenparagraphs\@isTrue\relax%
-  \if\@SolutionsOnly\@isFalse%
-    \if\@DisplaySolutions\@isTrue%
-      \penalty-300%
-    \fi%
-  \fi%
-\fi%
+	\if\exbank@opt@tightenparagraphs\@isTrue\relax%
+		\if\@DisplaySolutions\@isTrue%
+			\penalty-300%
+		\fi%
+	\fi%
 }
-\@ifundefined{figure}{}{\edef\figure{\unexpanded{\tighten@paragraph@always}\unexpanded\expandafter{\figure}}
+\@ifundefined{figure}{}{	\edef\figure{\unexpanded{\tighten@paragraph@always}\unexpanded\expandafter{\figure}}
 }
-\@ifundefined{endfigure}{}{\g@addto@macro\endfigure{\tighten@paragraph@always}
+\@ifundefined{endfigure}{}{	\g@addto@macro\endfigure{\tighten@paragraph@always}
 }
 \gdef\isFalse{0}
 \gdef\isTrue{1}
 \gdef\DisplayProblem{\isTrue}
 \gdef\@displayMetaCounter{\isFalse}
-\AtBeginDocument{  \if\@DisplaySolutions\isFalse
-    \@latex@warning{Hiding solutions. Show them with \string\DisplaySolutions}
-  \fi
+\AtBeginDocument{	\if\@DisplaySolutions\isFalse
+		\@latex@warning{Hiding solutions. Show them with \string\DisplaySolutions}
+	\fi
 }
 \global\let\do@ProcessCutFile = \ProcessCutFile
 \newif\ifexb@isdisplaying
 \newif\ifexb@hidenextsol
 \global\exb@hidenextsolfalse
 \gdef\exb@ifshowproblem#1#2{%
-\exb@isdisplayingfalse%
-\ifnum\pdfstrcmp{\DisplayProblem}{\@isTrue}=\z@%
-\ifexb@opthides\else\exb@isdisplayingtrue\fi\fi%
-\ifexb@isdisplaying#1\else#2\fi%
+	\exb@isdisplayingfalse%
+	\ifnum\pdfstrcmp{\DisplayProblem}{\@isTrue}=\z@%
+		\ifexb@opthides\else\exb@isdisplayingtrue\fi\fi%
+	\ifexb@isdisplaying#1\else#2\fi%
 }
 \gdef\showhideproblem#1{%
-\exb@ifshowproblem{\let\ProcessCutFile\do@ProcessCutFile#1\global\exb@hidenextsolfalse}{\def\ProcessCutFile{}\global\exb@hidenextsoltrue}%
+	\exb@ifshowproblem{\let\ProcessCutFile\do@ProcessCutFile#1\global\exb@hidenextsolfalse}{\def\ProcessCutFile{}\global\exb@hidenextsoltrue}%
 }
 \generalcomment{problem}{%
-  \edef\DisplaySolution{\@DisplaySolutions}%
-  \stepcounter{metacounter}%
-  \@dinfo{problem: Triggering \string\DecideProblemDisplay}%
-  \Trigger\DecideProblemDisplay%
-  \@dinfo{problem:Executing - \string\showhideproblem}%
-     \showhideproblem{%
-        \if\exbank@opt@partProblems\isTrue
-            \Trigger\BeginPartproblem%
-            \Trigger\VeryBeginPartproblem%
-        \else%
-            \Trigger\BeginProblem%
-            \Trigger\VeryBeginProblem%
-        \fi%
+	\edef\DisplaySolution{\@DisplaySolutions}%
+	\stepcounter{metacounter}%
+	\@dinfo{problem: Triggering \string\DecideProblemDisplay}%
+	\Trigger\DecideProblemDisplay%
+	\@dinfo{problem:Executing - \string\showhideproblem}%
+	\showhideproblem{%
+		\if\exbank@opt@partProblems\isTrue
+      \ifexb@solutionsonly\else
+			 \Trigger\BeginPartproblem%
+			 \Trigger\VeryBeginPartproblem%
+      \fi
+		\else%
+			\Trigger\BeginProblem%
+			\Trigger\VeryBeginProblem%
+		\fi%
 }%
+  \ifexb@solutionsonly\def\ProcessCutFile{}\if\DisplayProblem\@isTrue\relax\stepcounter{partproblemcounter}\fi\fi
 }{\@dinfo{Ending problem env}%
-    \if\DisplayProblem\@isTrue\relax%
-      \if\exbank@opt@partProblems\@isTrue\relax%
-        \Trigger\EndPartproblem%
-        \tighten@paragraph\fi%
-      \else
-        \Trigger\EndProblem%
-    \fi%
-\@dinfo{Ended problem env}%
+	\if\DisplayProblem\@isTrue\relax%
+		\if\exbank@opt@partProblems\@isTrue\relax%
+			\Trigger\EndPartproblem%
+			\tighten@paragraph\fi%
+	\else
+		\Trigger\EndProblem%
+	\fi%
+	\@dinfo{Ended problem env}%
 }
 \g@addto@macro\AfterproblemComment{\nextproblem{default}\ignorespaces}%
 \generalcomment{solution}{\@dinfo{START solution ENV}%
-\Trigger\AtBeginSolutionHard
-\begingroup
-  \if\@DisplaySolutions\isTrue
-    \if\DisplayProblem\isFalse
-      \xdef\DisplaySolution{\isFalse}
-    \fi
-  \fi
-  \if\DisplaySolution\isTrue
-    \ifexb@hidenextsol\else\Trigger\BeginSolution\fi
-  \else
-    \def\ProcessCutFile{}
-  \fi
+	\Trigger\AtBeginSolutionHard
+	\begingroup
+	\if\@DisplaySolutions\isTrue
+		\if\DisplayProblem\isFalse%
+			\xdef\DisplaySolution{\isFalse}
+		\fi
+	\fi
+	\if\DisplaySolution\isTrue%
+    \let\ProcessCutFile\do@ProcessCutFile%
+    \ifexb@solutionsonly\AtNextPar{\leavevmode\smash{\llap{\exbank@opt@partProblemHeader}}}\fi%
+		\ifexb@hidenextsol\else\Trigger\BeginSolution\fi%
+	\else
+		\def\ProcessCutFile{}%
+	\fi
 }{%
-\if\DisplaySolution\isTrue
-\Trigger\EndSolution
-\tighten@paragraph@solutions
-\vspace*{0.5em}
-\fi
-\endgroup
-\Trigger\EndSolutionHard\@dinfo{END solution ENV}%
+	\if\DisplaySolution\isTrue
+		\Trigger\EndSolution
+		\tighten@paragraph@solutions
+		\vspace*{0.5em}
+	\fi
+	\endgroup
+	\Trigger\EndSolutionHard\@dinfo{END solution ENV}%
 }
 \g@addto@macro\AftersolutionComment{\ignorespaces}
 \def\intromargin#1{%
-\if\exbank@opt@doMargins\@isTrue%
-\gdef\endintromargin{\endlist\endgroup}%
-\begingroup\list{}{\leftmargin#1}\item[]%
-\else%
-\relax\global\let\endintromargin=\relax\fi%
+	\if\exbank@opt@doMargins\@isTrue%
+		\gdef\endintromargin{\endlist\endgroup}%
+		\begingroup\list{}{\leftmargin#1}\item[]%
+	\else%
+		\relax\global\let\endintromargin=\relax\fi%
 }
 \generalcomment{intro}{\@dinfo{START intro ENV}%
-  \if\@countIntros\isTrue%
-    \stepcounter{metacounter}%
-    \Trigger\DecideProblemDisplay%
-    \gdef\exb@pre@intro{}%
-    \gdef\exb@post@intro{}%
-    \if\@displayMetaCounter\isTrue\relax%
-    \gdef\exb@pre@intro{{\leavevmode{\llap{{\Large\themetacounter}:\hspace*{-\pMarginLeft}}}}\ignorespaces}%
-    \fi%
-    \if\exb@showtags\isTrue%
-    \xdef\exb@post@intro{\exb@printCurrentTags}%
-    \fi%
-    \if\@spriteMode\@isTrue%
-      \if\introarg\@isTrue%
-        \stepcounter{partproblemcounter}%
-      \fi%
-    \fi%
-    \gdef\@displayIntro{\@isFalse}
-    \showhideproblem{%
-      \tighten@paragraph%
-      \Trigger\BeginIntro\exb@pre@intro\exb@post@intro%
-      \gdef\@displayIntro{\@isTrue}
+	\if\@countIntros\isTrue%
+		\stepcounter{metacounter}%
+		\Trigger\DecideProblemDisplay%
+		\gdef\exb@pre@intro{}%
+		\gdef\exb@post@intro{}%
+		\if\@displayMetaCounter\isTrue\relax%
+			\gdef\exb@pre@intro{{\leavevmode{\llap{{\Large\themetacounter}:\hspace*{-\pMarginLeft}}}}\ignorespaces}%
+		\fi%
+		\if\exb@showtags\isTrue%
+			\xdef\exb@post@intro{\exb@printCurrentTags}%
+		\fi%
+		\if\@spriteMode\@isTrue%
+			\if\introarg\@isTrue%
+				\stepcounter{partproblemcounter}%
+			\fi%
+		\fi%
+		\gdef\@displayIntro{\@isFalse}
+		\showhideproblem{%
+			\tighten@paragraph%
+			\Trigger\BeginIntro\exb@pre@intro\exb@post@intro%
+			\gdef\@displayIntro{\@isTrue}
 }%
-  \exb@ifshowproblem{\intromargin{-1em}}{}
-  \else%
-  \intromargin{-1em}
-  \fi%
-}{  \if\@countIntros\isTrue%
-    \Trigger\EndIntro%
-    \exb@ifshowproblem{\endintromargin}{}
-  \else
-    \endintromargin
-  \fi%
-  \@dinfo{END intro ENV}\ignorespaces%
+		\exb@ifshowproblem{\intromargin{-1em}}{}
+	\else%
+		\intromargin{-1em}
+	\fi%
+  \ifexb@solutionsonly\def\ProcessCutFile{}\fi
+}{	\if\@countIntros\isTrue%
+		\Trigger\EndIntro%
+		\exb@ifshowproblem{\endintromargin}{}
+	\else
+		\endintromargin
+	\fi%
+	\@dinfo{END intro ENV}\ignorespaces%
 }
 \g@addto@macro\AfterintroComment{\nextproblem{default}\ignorespaces}
 \def\squeeze{  \newlength{\marginw}
